--- a/mkcluster/popup.html
+++ b/mkcluster/popup.html
@@ -27,6 +27,8 @@
     </style>
 
     <script src="popup.js"></script>
+    <script src="lda.js"></script>
+    <script src="stopwords.js"></script>
 
   </head>
   <body>
