--- a/mkcluster/popup.html
+++ b/mkcluster/popup.html
@@ -37,8 +37,9 @@
       <p>
         Clusters:
       </p>
-      <ul id="insert_here">
-      </ul>
+
+      <div id="insert_here">
+      </div>
     </div>
   </body>
 </html>
